--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -313,9 +313,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading File 'config_LK.yml'\n",
+      "{'input_path': 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2', 'max_corners': 100, 'quality_level': 0.3, 'min_distance': 7, 'block_size': 7, 'window_size': 15, 'max_level': 2, 'max_iterations': 10, 'epsilon': 0.03, 'ransac_threshold': 3.0}\n",
+      "['c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame07.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame08.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame09.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame10.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame11.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame12.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame13.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame14.png']\n",
+      "['c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame07.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame08.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame09.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame10.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame11.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame12.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame13.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame14.png']\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[105], line 52\u001b[0m\n\u001b[0;32m     49\u001b[0m     p0 \u001b[39m=\u001b[39m good_new\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m)\n\u001b[0;32m     51\u001b[0m cv2\u001b[39m.\u001b[39mimwrite(\u001b[39m'\u001b[39m\u001b[39mflow.png\u001b[39m\u001b[39m'\u001b[39m, frame_with_flow)\n\u001b[1;32m---> 52\u001b[0m write_flow(mask, \u001b[39m'\u001b[39;49m\u001b[39mflow_field.flo\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m     53\u001b[0m \u001b[39m#############\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[14], line 2\u001b[0m, in \u001b[0;36mwrite_flow\u001b[1;34m(filename, flow)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwrite_flow\u001b[39m(filename, flow):\n\u001b[1;32m----> 2\u001b[0m     height, width \u001b[39m=\u001b[39m flow\u001b[39m.\u001b[39;49mshape[:\u001b[39m2\u001b[39m]\n\u001b[0;32m      3\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(filename, \u001b[39m'\u001b[39m\u001b[39mwb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m      4\u001b[0m         f\u001b[39m.\u001b[39mwrite(struct\u001b[39m.\u001b[39mpack(\u001b[39m'\u001b[39m\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m, width))\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'shape'"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Loading File \\'config_LK.yml\\'\")\n",
     "\n",
@@ -368,62 +391,8 @@
     "    p0 = good_new.reshape(-1,1,2)\n",
     "    \n",
     "cv2.imwrite('flow.png', frame_with_flow)\n",
-    "save_flow_field(mask, 'flow_field.flo')\n",
+    "write_flow(mask, 'flow_field.flo')\n",
     "#############"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prev_frame = frames[0]\n",
-    "prev_gray = cv2.cvtColor(prev_frame, cv2.COLOR_BGR2GRAY)\n",
-    "prev_corners = cv2.goodFeaturesToTrack(prev_gray, mask=None, **feature_params)\n",
-    "prev_roi = cv2.boundingRect(prev_corners)\n",
-    "\n",
-    "flow_list = []  #List to store optical flow vectors\n",
-    "\n",
-    "mask = np.zeros_like(prev_frame)\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(10, 7))\n",
-    "\n",
-    "for curr_frame in frames[1:]:\n",
-    "    curr_gray = cv2.cvtColor(curr_frame, cv2.COLOR_BGR2GRAY)\n",
-    "\n",
-    "    curr_corners, status, _ = cv2.calcOpticalFlowPyrLK(prev_gray, curr_gray, prev_corners, None, **lk_params)\n",
-    "\n",
-    "    good_prev_corners = prev_corners[status == 1]\n",
-    "    good_curr_corners = curr_corners[status == 1]\n",
-    "\n",
-    "    flow = good_curr_corners - good_prev_corners # Calculate optical flow vectores\n",
-    "    \n",
-    "    flow_list.append(flow)\n",
-    "\n",
-    "    M, _ = cv2.findHomography(good_prev_corners, good_curr_corners, cv2.RANSAC, config['ransac_threshold'])\n",
-    "\n",
-    "    warped_roi = cv2.warpPerspective(prev_frame, M, (curr_frame.shape[1], curr_frame.shape[0]))\n",
-    "    warped_mask = cv2.warpPerspective(mask, M, (curr_frame.shape[1], curr_frame.shape[0]))\n",
-    "\n",
-    "    output = curr_frame.copy()\n",
-    "    output[warped_mask != 0] = 0\n",
-    "    output = cv2.add(output, warped_roi)\n",
-    "\n",
-    "    ax.imshow(cv2.cvtColor(output, cv2.COLOR_BGR2RGB))\n",
-    "    ax.axis('off')\n",
-    "    plt.tight_layout()\n",
-    "    clear_output(wait=True)\n",
-    "    display(fig)\n",
-    "\n",
-    "    prev_gray = curr_gray.copy()\n",
-    "    prev_corners = good_curr_corners.reshape(-1, 1, 2)\n",
-    "    prev_roi = cv2.boundingRect(prev_corners)\n",
-    "flow_array = np.array(flow_list)\n",
-    "\n",
-    "output_file = 'Optical_flow_LS.flo'\n",
-    "write_flow(output_file,flow_array)\n",
-    "cv2.destroyAllWindows()"
    ]
   },
   {
