--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {
     "tags": [
      "Flow"
@@ -257,7 +257,7 @@
    "source": [
     "import struct\n",
     "\n",
-    "def write_flow(flow, filename):\n",
+    "def write_flow_field(flow, filename):\n",
     "    height, width, _ = flow.shape\n",
     "    with open(filename, 'wb') as f:\n",
     "        # Write the .flo file header\n",
@@ -268,20 +268,22 @@
     "        # Write the flow vectors\n",
     "        f.write(flow.astype(np.float32).tobytes())\n",
     "\n",
-    "  \n",
-    "def read_flow(filename):\n",
-    "     with open(filename, 'rb') as f:\n",
-    "            magic = np.fromfile(f, np.float32, count=1)\n",
-    "            if 202021.25 != magic:\n",
-    "                print('Magic number incorrect. Invalid .flo file')\n",
-    "            else:\n",
-    "                w = np.fromfile(f, np.int32, count=1)[0]\n",
-    "                h = np.fromfile(f, np.int32, count=1)[0]\n",
-    "                print('Reading %d x %d flo file' % (w, h))\n",
-    "                data = np.fromfile(f, np.float32, count=2*w*h)\n",
-    "                # Reshape data into 3D array (columns, rows, bands)\n",
-    "                flow = np.resize(data, (h, w, 2))\n",
-    "            return flow\n",
+    "def read_flow_field(filename):\n",
+    "    with open(filename, 'rb') as f:\n",
+    "        magic = np.frombuffer(f.read(4), dtype=np.uint8).view(np.int32)\n",
+    "        print(magic)\n",
+    "        if magic != 1212500304:\n",
+    "            raise ValueError(\"Invalid .flo file format!\")\n",
+    "        #1318095507\n",
+    "        \n",
+    "        width = np.frombuffer(f.read(4), dtype=np.int32)[0]\n",
+    "        height = np.frombuffer(f.read(4), dtype=np.int32)[0]\n",
+    "        print(width)\n",
+    "        print(height)\n",
+    "        flow_data = np.frombuffer(f.read(), dtype=np.float32).reshape(height,width,2)\n",
+    "\n",
+    "        print(np.asarray(flow_data).shape)\n",
+    "    return flow_data\n",
     "\n",
     "def compute_angular_error(flow_gt, flow_est):\n",
     "    angles_gt = np.arctan2(flow_gt[:, :, 1], flow_gt[:, :, 0])\n",
@@ -294,8 +296,8 @@
     "    return np.mean(error)\n",
     "\n",
     "def compare_flow_files(file_gt, file_est):\n",
-    "    flow_gt = read_flow(file_gt)\n",
-    "    flow_est = read_flow(file_est)\n",
+    "    flow_gt = read_flow_field(file_gt)\n",
+    "    flow_est = read_flow_field(file_est)\n",
     "\n",
     "    error_endpoint = compute_endpoint_error(flow_gt, flow_est)\n",
     "    error_angular = compute_angular_error(flow_gt, flow_est)\n",
@@ -313,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -323,19 +325,11 @@
       "Loading File 'config_LK.yml'\n",
       "{'input_path': 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2', 'max_corners': 100, 'quality_level': 0.3, 'min_distance': 7, 'block_size': 7, 'window_size': 15, 'max_level': 2, 'max_iterations': 10, 'epsilon': 0.03, 'ransac_threshold': 3.0}\n",
       "['c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame07.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame08.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame09.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame10.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame11.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame12.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame13.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame14.png']\n",
-      "['c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame07.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame08.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame09.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame10.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame11.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame12.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame13.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame14.png']\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[105], line 52\u001b[0m\n\u001b[0;32m     49\u001b[0m     p0 \u001b[39m=\u001b[39m good_new\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m)\n\u001b[0;32m     51\u001b[0m cv2\u001b[39m.\u001b[39mimwrite(\u001b[39m'\u001b[39m\u001b[39mflow.png\u001b[39m\u001b[39m'\u001b[39m, frame_with_flow)\n\u001b[1;32m---> 52\u001b[0m write_flow(mask, \u001b[39m'\u001b[39;49m\u001b[39mflow_field.flo\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m     53\u001b[0m \u001b[39m#############\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[14], line 2\u001b[0m, in \u001b[0;36mwrite_flow\u001b[1;34m(filename, flow)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwrite_flow\u001b[39m(filename, flow):\n\u001b[1;32m----> 2\u001b[0m     height, width \u001b[39m=\u001b[39m flow\u001b[39m.\u001b[39;49mshape[:\u001b[39m2\u001b[39m]\n\u001b[0;32m      3\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(filename, \u001b[39m'\u001b[39m\u001b[39mwb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m      4\u001b[0m         f\u001b[39m.\u001b[39mwrite(struct\u001b[39m.\u001b[39mpack(\u001b[39m'\u001b[39m\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m, width))\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'shape'"
+      "['c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame07.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame08.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame09.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame10.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame11.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame12.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame13.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame14.png']\n",
+      "[1212500304]\n",
+      "640\n",
+      "480\n",
+      "(480, 640, 2)\n"
      ]
     }
    ],
@@ -360,7 +354,6 @@
     "    maxLevel=config['max_level'],\n",
     "    criteria=(cv2.TERM_CRITERIA_EPS | cv2.TERM_CRITERIA_COUNT, config['max_iterations'], config['epsilon'])\n",
     ")\n",
-    "#############\n",
     "color = np.random.randint(0, 255, (100, 3))\n",
     "old_frame = frames[0]\n",
     "old_gray = cv2.cvtColor(old_frame, cv2.COLOR_BGR2GRAY)\n",
@@ -391,8 +384,24 @@
     "    p0 = good_new.reshape(-1,1,2)\n",
     "    \n",
     "cv2.imwrite('flow.png', frame_with_flow)\n",
-    "write_flow(mask, 'flow_field.flo')\n",
-    "#############"
+    "write_flow_field(mask,'flow_field.flo')\n",
+    "\n",
+    "\n",
+    "flow_data = read_flow_field('/Users/nmcna/Desktop/FEUP/4oano/2osemestre/VC/assignment2/dataset/other-gt-flow/Urban2/flow10.flo')  # Read the .flo file\n",
+    "\n",
+    "# Compute the magnitude and angle of the flow vectors\n",
+    "magnitude, angle = cv2.cartToPolar(flow_data[..., 0], flow_data[..., 1])\n",
+    "\n",
+    "# Visualize the flow field\n",
+    "hue = angle * 180 / np.pi / 2\n",
+    "saturation = np.ones_like(magnitude)\n",
+    "value = cv2.normalize(magnitude, None, 0, 255, cv2.NORM_MINMAX)\n",
+    "flow_visualization = cv2.cvtColor(cv2.merge((hue, saturation, value)).astype(np.uint8), cv2.COLOR_HSV2BGR)\n",
+    "\n",
+    "# Display the flow visualization\n",
+    "cv2.imshow('Optical Flow', flow_visualization)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
