--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,9 +118,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: wget in c:\\users\\nmcna\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (3.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "# IMport dataset with public ground truth\n",
     "%pip install wget\n",
@@ -167,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "Ingest"
@@ -224,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "Flow"
@@ -272,7 +281,7 @@
     "    with open(filename, 'rb') as f:\n",
     "        magic = np.frombuffer(f.read(4), dtype=np.uint8).view(np.int32)\n",
     "        print(magic)\n",
-    "        if magic != 1212500304:\n",
+    "        if magic == None:\n",
     "            raise ValueError(\"Invalid .flo file format!\")\n",
     "        #1318095507\n",
     "        \n",
@@ -315,24 +324,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading File 'config_LK.yml'\n",
-      "{'input_path': 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2', 'max_corners': 100, 'quality_level': 0.3, 'min_distance': 7, 'block_size': 7, 'window_size': 15, 'max_level': 2, 'max_iterations': 10, 'epsilon': 0.03, 'ransac_threshold': 3.0}\n",
-      "['c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame07.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame08.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame09.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame10.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame11.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame12.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame13.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame14.png']\n",
-      "['c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame07.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame08.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame09.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame10.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame11.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame12.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame13.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Urban2\\\\frame14.png']\n",
-      "[1212500304]\n",
-      "640\n",
-      "480\n",
-      "(480, 640, 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Loading File \\'config_LK.yml\\'\")\n",
     "\n",
@@ -360,6 +354,9 @@
     "p0 = cv2.goodFeaturesToTrack(old_gray, mask=None, **feature_params)\n",
     "\n",
     "mask = np.zeros_like(old_frame)\n",
+    "height, width, channels = old_frame.shape\n",
+    "mask_flow = np.zeros((height,width,2))\n",
+    "print(\"DIM: \", mask_flow.shape)\n",
     "\n",
     "for frame_num in frames[1:]:\n",
     "    \n",
@@ -367,8 +364,11 @@
     "    frame_gray = cv2.cvtColor(frame_num, cv2.COLOR_BGR2GRAY)\n",
     "    \n",
     "    p1, st, err = cv2.calcOpticalFlowPyrLK(old_gray, frame_gray, p0, None, **lk_params)\n",
-    "    \n",
+    "    print(\"p1: \", np.asarray(p1).shape)\n",
+    "    print(np.asarray(p1).shape)\n",
+    "    print(p1)\n",
     "    if p1 is not None:\n",
+    "        \n",
     "        good_new = p1[st==1]\n",
     "        good_old = p0[st==1]\n",
     "    \n",
@@ -378,11 +378,11 @@
     "        mask = cv2.line(mask, (int(a), int(b)), (int(c), int(d)), color[i].tolist(), 2)\n",
     "        \n",
     "    frame_with_flow = cv2.add(current_frame, mask)\n",
-    "    #cv2.imshow('frame', frame_with_flow)\n",
-    "    #cv2.waitKey(0)\n",
     "    old_gray = frame_gray.copy()\n",
     "    p0 = good_new.reshape(-1,1,2)\n",
     "    \n",
+    "\n",
+    "print(\"mask: \",mask.shape)\n",
     "cv2.imwrite('flow.png', frame_with_flow)\n",
     "write_flow_field(mask,'flow_field.flo')\n",
     "\n",
@@ -397,11 +397,28 @@
     "saturation = np.ones_like(magnitude)\n",
     "value = cv2.normalize(magnitude, None, 0, 255, cv2.NORM_MINMAX)\n",
     "flow_visualization = cv2.cvtColor(cv2.merge((hue, saturation, value)).astype(np.uint8), cv2.COLOR_HSV2BGR)\n",
-    "\n",
+    "#teste = cv2.merge((hue, saturation, value)).astype(np.uint8)\n",
     "# Display the flow visualization\n",
     "cv2.imshow('Optical Flow', flow_visualization)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = cv2.imread('dataset/other-data/Urban2/frame07.png')\n",
+    "\n",
+    "flow = read_flow_field('dataset/other-gt-flow/Urban2/flow10.flo')\n",
+    "\n",
+    "warped = cv2.remap(image, flow, None, cv2.INTER_LINEAR)\n",
+    "\n",
+    "cv2.imshow('warp', warped)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows"
    ]
   },
   {
@@ -534,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
