--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -280,20 +280,20 @@
     "\n",
     "def read_flow_field(filename):\n",
     "    with open(filename, 'rb') as f:\n",
-    "        magic = np.frombuffer(f.read(4), dtype=np.uint8).view(np.int32)\n",
-    "        print(magic)\n",
-    "        if magic == None:\n",
-    "            raise ValueError(\"Invalid .flo file format!\")\n",
-    "        #1318095507\n",
-    "        \n",
+    "        # Read the magic number\n",
+    "        magic = f.read(4).decode()\n",
+    "        if magic != 'PIEH':\n",
+    "            raise ValueError('Invalid flow file format.')\n",
+    "\n",
+    "        # Read the width and height of the flow field\n",
     "        width = np.frombuffer(f.read(4), dtype=np.int32)[0]\n",
     "        height = np.frombuffer(f.read(4), dtype=np.int32)[0]\n",
-    "        print(width)\n",
-    "        print(height)\n",
-    "        flow_data = np.frombuffer(f.read(), dtype=np.float32).reshape(height,width,2)\n",
     "\n",
-    "        print(np.asarray(flow_data).shape)\n",
-    "    return flow_data\n",
+    "        # Read the flow field data\n",
+    "        flow_data = np.frombuffer(f.read(), dtype=np.float32)\n",
+    "        flow = flow_data.reshape((height, width, 2))\n",
+    "\n",
+    "    return flow\n",
     "\n",
     "def compute_angular_error(flow_gt, flow_est):\n",
     "    angles_gt = np.arctan2(flow_gt[:, :, 1], flow_gt[:, :, 0])\n",
@@ -313,6 +313,64 @@
     "    error_angular = compute_angular_error(flow_gt, flow_est)\n",
     "\n",
     "    return error_endpoint, error_angular"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Angular Error: 9.9700934e-05\n",
+      "Standard Deviation of Angular Error: 0.00017069293\n",
+      "Mean Endpoint Error: 9.9700934e-05\n",
+      "Standard Deviation of Endpoint Error: 0.00017069293\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import math\n",
+    "\n",
+    "\n",
+    "\n",
+    "def calculate_angular_error(flow_gt, flow_pred):\n",
+    "    flow_gt_norm = np.sqrt(np.sum(flow_gt ** 2, axis=2))\n",
+    "    flow_pred_norm = np.sqrt(np.sum(flow_pred ** 2, axis=2))\n",
+    "    dot_product = np.sum(flow_gt * flow_pred, axis=2)\n",
+    "    cos_theta = np.clip(dot_product / (flow_gt_norm * flow_pred_norm), -1.0, 1.0)\n",
+    "    angular_error = np.arccos(cos_theta)\n",
+    "    return angular_error\n",
+    "\n",
+    "def calculate_endpoint_error(flow_gt, flow_pred):\n",
+    "    endpoint_error = np.sqrt(np.sum((flow_gt - flow_pred) ** 2, axis=2))\n",
+    "    return endpoint_error\n",
+    "\n",
+    "\n",
+    "def calculate_error_statistics(error):\n",
+    "    mean_error = np.mean(angular_error)\n",
+    "    std_error = np.std(angular_error)\n",
+    "    return mean_error, std_error\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "flow_gt = read_flow_file1('/workspace/VC/assignment2/dataset/other-gt-flow/Urban2/flow10.flo')\n",
+    "flow_pred = read_flow_file1('/workspace/VC/assignment2/dataset/other-gt-flow/Urban2/flow10.flo')\n",
+    "\n",
+    "angular_error = calculate_angular_error(flow_gt, flow_pred)\n",
+    "angular_mean, angular_std = calculate_error_statistics(angular_error)\n",
+    "\n",
+    "print('Mean Angular Error:', mean_error)\n",
+    "print('Standard Deviation of Angular Error:', std_error)\n",
+    "\n",
+    "endpoint_error = calculate_endpoint_error(flow_gt, flow_pred)\n",
+    "endpoint_mean, endpoint_std = calculate_error_statistics(endpoint_error)\n",
+    "\n",
+    "print('Mean Endpoint Error:', endpoint_mean)\n",
+    "print('Standard Deviation of Endpoint Error:', endpoint_std)\n"
    ]
   },
   {
