--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "tags": [
      "Flow"
@@ -284,26 +284,7 @@
     "        flow_data = np.frombuffer(f.read(), dtype=np.float32)\n",
     "        flow = flow_data.reshape((height, width, 2))\n",
     "\n",
-    "    return flow\n",
-    "\n",
-    "def compute_angular_error(flow_gt, flow_est):\n",
-    "    angles_gt = np.arctan2(flow_gt[:, :, 1], flow_gt[:, :, 0])\n",
-    "    angles_est = np.arctan2(flow_est[:, :, 1], flow_est[:, :, 0])\n",
-    "    error = (np.sum((angles_gt - angles_est) ** 2, axis=2))\n",
-    "    return np.mean(error)\n",
-    "\n",
-    "def compute_endpoint_error(flow_gt, flow_est):\n",
-    "    error = np.sqrt(np.sum((flow_gt - flow_est) ** 2, axis=2))\n",
-    "    return np.mean(error)\n",
-    "\n",
-    "def compare_flow_files(file_gt, file_est):\n",
-    "    flow_gt = read_flow_field(file_gt)\n",
-    "    flow_est = read_flow_field(file_est)\n",
-    "\n",
-    "    error_endpoint = compute_endpoint_error(flow_gt, flow_est)\n",
-    "    error_angular = compute_angular_error(flow_gt, flow_est)\n",
-    "\n",
-    "    return error_endpoint, error_angular"
+    "    return flow"
    ]
   },
   {
@@ -1004,6 +985,8 @@
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "import flowvid\n",
     "import numpy as np\n",
     "from IPython.display import HTML\n",
