--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "metadata": {
     "tags": [
      "Flow"
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -329,14 +329,14 @@
     "\n",
     "\n",
     "# Example usage\n",
-    "flow_gt = read_flow_file1('/workspace/VC/assignment2/dataset/other-gt-flow/Urban2/flow10.flo')\n",
-    "flow_pred = read_flow_file1('/workspace/VC/assignment2/dataset/other-gt-flow/Urban2/flow10.flo')\n",
+    "flow_gt = read_flow_field('/Users/nmcna/Desktop/FEUP/4oano/2osemestre/VC/assignment2/dataset/other-gt-flow/Urban2/flow10.flo')\n",
+    "flow_pred = read_flow_field('/Users/nmcna/Desktop/FEUP/4oano/2osemestre/VC/assignment2/dataset/other-gt-flow/Urban2/flow10.flo')\n",
     "\n",
     "angular_error = calculate_angular_error(flow_gt, flow_pred)\n",
     "angular_mean, angular_std = calculate_error_statistics(angular_error)\n",
     "\n",
-    "print('Mean Angular Error:', mean_error)\n",
-    "print('Standard Deviation of Angular Error:', std_error)\n",
+    "print('Mean Angular Error:', angular_mean)\n",
+    "print('Standard Deviation of Angular Error:', angular_std)\n",
     "\n",
     "endpoint_error = calculate_endpoint_error(flow_gt, flow_pred)\n",
     "endpoint_mean, endpoint_std = calculate_error_statistics(endpoint_error)\n",
