added mov file type suppoort

--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -204,7 +204,7 @@
     "        print(f\"{frame_paths}\")\n",
     "        frames = [cv2.imread(frame_path) for frame_path in frame_paths]\n",
     "    else :\n",
-    "        if input_path.endswith('.mp4'):\n",
+    "        if input_path.endswith('.mp4') or input_path.endswith('.mov') :\n",
     "            cap = cv2.VideoCapture(input_path)\n",
     "            frames = []\n",
     "            while True:\n",
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "Flow"
@@ -260,10 +260,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Angular Error: 1.5791076\n",
-      "Standard Deviation of Angular Error: 0.5013132\n",
-      "Mean Endpoint Error: 1.5791076\n",
-      "Standard Deviation of Endpoint Error: 0.5013132\n"
+      "Mean Angular Error: 9.9700934e-05\n",
+      "Standard Deviation of Angular Error: 0.00017069293\n",
+      "Mean Endpoint Error: 9.9700934e-05\n",
+      "Standard Deviation of Endpoint Error: 0.00017069293\n"
      ]
     }
    ],
@@ -322,8 +322,9 @@
     "\n",
     "# Example usage\n",
     "flow_gt = read_flow_field('/workspace/VC/assignment2/dataset/other-gt-flow/Urban2/flow10.flo')\n",
-    "write_flow_field(flow_gt, \"flow_gt.flo\")\n",
-    "flow_pred = read_flow_field('flow_gt.flo')\n",
+    "flow_pred = read_flow_field('/workspace/VC/assignment2/dataset/other-gt-flow/Urban2/flow10.flo')\n",
+    "#write_flow_field(flow_gt, \"flow_gt.flo\")\n",
+    "#flow_pred = read_flow_field('flow_gt.flo')\n",
     "\n",
     "angular_error = calculate_angular_error(flow_gt, flow_pred)\n",
     "angular_mean, angular_std = calculate_error_statistics(angular_error)\n",
