--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -93,18 +93,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\nmcna\\AppData\\Local\\Temp\\ipykernel_9840\\130197631.py:7: DeprecationWarning: Please use `convolve` from the `scipy.ndimage` namespace, the `scipy.ndimage.filters` namespace is deprecated.\n",
-      "  from scipy.ndimage.filters import convolve as filter2\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "%pip install scipy\n",
+    "%pip install flowvid\n",
+    "%pip install imageio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "Ingest"
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +269,7 @@
    },
    "outputs": [],
    "source": [
-    "import struct\n",
+    "\"\"\" import struct\n",
     "\n",
     "def write_flow_field(flow, filename):\n",
     "    height, width, _ = flow.shape\n",
@@ -299,8 +301,54 @@
     "        flow = flow_data.reshape((height, width, 2))\n",
     "\n",
     "    return flow\n",
+    " \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import struct\n",
+    "import numpy as np\n",
     "\n",
     "\n",
+    "def read_flow_field(file_path):\n",
+    "    with open(file_path, \"rb\") as f:\n",
+    "        # Read .flo header\n",
+    "        magic = struct.unpack('f', f.read(4))[0]\n",
+    "        width = struct.unpack('i', f.read(4))[0]\n",
+    "        height = struct.unpack('i', f.read(4))[0]\n",
+    "\n",
+    "        # Ensure .flo file format\n",
+    "        assert magic == 202021.25, \"Invalid .flo file format.\"\n",
+    "\n",
+    "        # Read optical flow data\n",
+    "        flow_data = np.fromfile(f, np.float32, width * height * 2)\n",
+    "        flow_data = flow_data.reshape((height, width, 2))\n",
+    "\n",
+    "    return flow_data\n",
+    "\n",
+    "\n",
+    "def write_flow_field(file_path, flow_data):\n",
+    "    height, width = flow_data.shape[:2]\n",
+    "    with open(file_path, \"wb\") as f:\n",
+    "        # Write .flo header\n",
+    "        f.write(struct.pack('f', 202021.25))\n",
+    "        f.write(struct.pack('i', width))\n",
+    "        f.write(struct.pack('i', height))\n",
+    "\n",
+    "        # Write optical flow data\n",
+    "        flow_data.flatten().astype(np.float32).tofile(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def calculate_angular_error(flow_gt, flow_pred):\n",
     "    flow_gt_norm = np.sqrt(np.sum(flow_gt ** 2, axis=2))\n",
     "    flow_pred_norm = np.sqrt(np.sum(flow_pred ** 2, axis=2))\n",
@@ -317,21 +365,39 @@
     "def calculate_error_statistics(error):\n",
     "    mean_error = np.mean(angular_error)\n",
     "    std_error = np.std(angular_error)\n",
-    "    return mean_error, std_error\n",
-    "\n",
+    "    return mean_error, std_error\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Example usage\n",
-    "flow_gt = read_flow_field('/workspace/VC/assignment2/dataset/other-gt-flow/Urban2/flow10.flo')\n",
-    "flow_pred = read_flow_field('/workspace/VC/assignment2/dataset/other-gt-flow/Urban2/flow10.flo')\n",
-    "#write_flow_field(flow_gt, \"flow_gt.flo\")\n",
-    "#flow_pred = read_flow_field('flow_gt.flo')\n",
+    "original_file = \"/workspace/VC/assignment2/dataset/other-gt-flow/Urban2/flow10.flo\"\n",
+    "new_file = \"new.flo\"\n",
     "\n",
-    "angular_error = calculate_angular_error(flow_gt, flow_pred)\n",
+    "# Read the original .flo file\n",
+    "original_flow = read_flow_field(original_file)\n",
+    "\n",
+    "# Write the original flow to a new .flo file\n",
+    "write_flow_field(new_file, original_flow)\n",
+    "\n",
+    "# Read the new .flo file\n",
+    "new_flow = read_flow_field(new_file)\n",
+    "\n",
+    "# Compare the original and new flow files\n",
+    "identical = np.array_equal(original_flow, new_flow)\n",
+    "print(\"The original and new files are identical:\", identical)\n",
+    "\n",
+    "angular_error = calculate_angular_error(original_flow, new_flow)\n",
     "angular_mean, angular_std = calculate_error_statistics(angular_error)\n",
     "\n",
     "print('Mean Angular Error:', angular_mean)\n",
     "print('Standard Deviation of Angular Error:', angular_std)\n",
     "\n",
-    "endpoint_error = calculate_endpoint_error(flow_gt, flow_pred)\n",
+    "endpoint_error = calculate_endpoint_error(original_flow, new_flow)\n",
     "endpoint_mean, endpoint_std = calculate_error_statistics(endpoint_error)\n",
     "\n",
     "print('Mean Endpoint Error:', endpoint_mean)\n",
@@ -348,38 +414,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading File 'config_LK.yml'\n",
-      "{'input_path': 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\Forest_15_3b_Videvo.mov', 'max_corners': 100, 'quality_level': 0.3, 'min_distance': 7, 'block_size': 7, 'window_size': 15, 'max_level': 2, 'max_iterations': 10, 'epsilon': 0.03, 'ransac_threshold': 3.0}\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 22\u001b[0m\n\u001b[0;32m     16\u001b[0m lk_params \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m(\n\u001b[0;32m     17\u001b[0m     winSize\u001b[39m=\u001b[39m(config[\u001b[39m'\u001b[39m\u001b[39mwindow_size\u001b[39m\u001b[39m'\u001b[39m], config[\u001b[39m'\u001b[39m\u001b[39mwindow_size\u001b[39m\u001b[39m'\u001b[39m]),\n\u001b[0;32m     18\u001b[0m     maxLevel\u001b[39m=\u001b[39mconfig[\u001b[39m'\u001b[39m\u001b[39mmax_level\u001b[39m\u001b[39m'\u001b[39m],\n\u001b[0;32m     19\u001b[0m     criteria\u001b[39m=\u001b[39m(cv2\u001b[39m.\u001b[39mTERM_CRITERIA_EPS \u001b[39m|\u001b[39m cv2\u001b[39m.\u001b[39mTERM_CRITERIA_COUNT, config[\u001b[39m'\u001b[39m\u001b[39mmax_iterations\u001b[39m\u001b[39m'\u001b[39m], config[\u001b[39m'\u001b[39m\u001b[39mepsilon\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m     20\u001b[0m )\n\u001b[0;32m     21\u001b[0m color \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrandint(\u001b[39m0\u001b[39m, \u001b[39m255\u001b[39m, (\u001b[39m100\u001b[39m, \u001b[39m3\u001b[39m))\n\u001b[1;32m---> 22\u001b[0m old_frame \u001b[39m=\u001b[39m frames[\u001b[39m0\u001b[39;49m]\n\u001b[0;32m     23\u001b[0m old_gray \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mcvtColor(old_frame, cv2\u001b[39m.\u001b[39mCOLOR_BGR2GRAY)\n\u001b[0;32m     24\u001b[0m p0 \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mgoodFeaturesToTrack(old_gray, mask\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mfeature_params)\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Loading File \\'config_LK.yml\\'\")\n",
     "\n",
     "config = load_config('config_LK.yml')\n",
     "\n",
-    "input_path = config['input_path']\n",
-    "\n",
-    "frames = get_input_frames('/Users/nmcna/Desktop/FEUP/4oano/2osemestre/VC/assignment2/dataset/Forest_15_3b_Videvo.mov')\n",
-    "\n",
+    "frames = get_input_frames(config['input_path'])\n",
     "\n",
     "feature_params = dict(\n",
     "    maxCorners=config['max_corners'],\n",
@@ -428,10 +471,10 @@
     "\n",
     "print(\"mask: \",mask.shape)\n",
     "cv2.imwrite('flow.png', frame_with_flow)\n",
-    "write_flow_field(mask,'flow_field.flo')\n",
+    "write_flow_field('flow_field.flo',mask)\n",
     "\n",
     "\n",
-    "flow_data = read_flow_field('/Users/nmcna/Desktop/FEUP/4oano/2osemestre/VC/assignment2/dataset/other-gt-flow/Urban2/flow10.flo')  # Read the .flo file\n",
+    "flow_data = read_flow_field('flow_field.flo')  # Read the .flo file\n",
     "\n",
     "# Compute the magnitude and angle of the flow vectors\n",
     "magnitude, angle = cv2.cartToPolar(flow_data[..., 0], flow_data[..., 1])\n",
@@ -719,14 +762,13 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
     "import flowvid\n",
     "import numpy as np\n",
     "from IPython.display import HTML\n",
     "\n",
     "import flowvid as fv\n",
     "\n",
-    "flo_data = fv.input.flo('flow_gt.flo')\n",
+    "flo_data = fv.input.flo('/workspace/VC/assignment2/new.flo')\n",
     "\n",
     "# You can normalize by frame OR the whole video\n",
     "# Normalize each flo file independently\n",
