--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -387,6 +387,8 @@
     "# Read the new .flo file\n",
     "new_flow = read_flow_field(new_file)\n",
     "\n",
+    "#Sanity check for write and read function\n",
+    "\n",
     "# Compare the original and new flow files\n",
     "identical = np.array_equal(original_flow, new_flow)\n",
     "print(\"The original and new files are identical:\", identical)\n",
